Eclipse Neon.2: udpate project files

--- a/.cproject
+++ b/.cproject
@@ -55,4 +55,5 @@
 			<resource resourceType="PROJECT" workspacePath="/fix_handler"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
