parse and send security status message

--- a/src/exchange_server.cfg
+++ b/src/exchange_server.cfg
@@ -10,5 +10,5 @@ FileStorePath=/home/fix/deve/cme/fix_handler/bin
 [SESSION]
 BeginString=FIX.4.2
 SenderCompID=CME
-TargetCompID=ABC123N
+TargetCompID=2E0004N
 DataDictionary=/home/fix/deve/cme/fix_handler/src/FIX42.xml
