--- a/src/exchange_settings.ini
+++ b/src/exchange_settings.ini
@@ -5,18 +5,18 @@ send_url=tcp://*:6002
 [session]
 target_comp_id=CME
 target_sub_id=G
-sender_comp_id=ABC123N
-sender_sub_id=T
-sender_location_id=USALO
-password=abc
-password_length=3
-app_sys_name=A1
-trading_sys_ver=A2
-app_sys_vendor=A3
+sender_comp_id=2E0004N
+sender_sub_id=qwc
+sender_location_id=SG
+password=FGXKG
+password_length=5
+app_sys_name=QWC
+trading_sys_ver=1.0
+app_sys_vendor=QWC
 
 [order]
-account=yyc
+account=2E0004
 manual_order_indicator=N
 security_type=FUT
 customer_or_firm=1
-cti_code=1
+cti_code=3
