添加共通：从 mongodb 中查询数据

--- a/src/original_saver_settings.ini
+++ b/src/original_saver_settings.ini
@@ -1,5 +1,5 @@
 [persist]
 receive_url=tcp://localhost:5557
 db_url=mongodb://localhost:27017/
-db_name=mydb
-collection_name=mycoll
+db_name=markets_data
+page_size=10
