修改交易类的代码

--- a/src/femas_config.ini
+++ b/src/femas_config.ini
@@ -11,6 +11,12 @@ url=tcp://180.166.103.35:28005
 
 [femas-exchange]
 url=tcp://180.166.103.35:28002
+InvestorID=000101
+OffsetFlag=0
+HedgeFlag=1
+TimeCondition=1
+IsAutoSuspend=0
+ExchangeID=CFFEX
 
 [zeromq]
 org_url=tcp://*:5557
