增加了rem交易接口代码

--- a/src/rem_config.ini
+++ b/src/rem_config.ini
@@ -12,7 +12,8 @@ IP=183.129.220.106
 Port=40006
 
 [rem-exchange]
-url=tcp://180.166.103.35:28002
+IP=183.129.220.106
+Port=40000
 InvestorID=000101
 OffsetFlag=0
 HedgeFlag=1
