将撮合引擎（第一阶段）模块（重放数据库中的原始数据）改成对外发布 BBO，L2，合约信息

--- a/src/trade_matching_settings.ini
+++ b/src/trade_matching_settings.ini
@@ -4,6 +4,10 @@ start_include=2017-04-21 12:41:16
 end_exclude=2017-04-26 12:41:16 
 speed=2
 
+[alpha-market]
+book_url=tcp://*:5558
+
+
 [alpha-order]
 receive_url=tcp://localhost:6001
 send_url=tcp://*:6002
