修改rem交易类接口

--- a/src/rem_config.ini
+++ b/src/rem_config.ini
@@ -14,12 +14,10 @@ Port=40006
 [rem-exchange]
 IP=183.129.220.106
 Port=40000
-InvestorID=000101
-OffsetFlag=0
-HedgeFlag=1
-TimeCondition=1
-IsAutoSuspend=0
-ExchangeID=21001
+InvestorID=000240
+HedgeFlag=2
+ExchangeID=102
+SecType=3
 
 [zeromq]
 org_url=tcp://*:5557
