撮合引擎（第三阶段）模块（撮合算法）

--- a/src/trade_matching_settings.ini
+++ b/src/trade_matching_settings.ini
@@ -7,7 +7,11 @@ speed=2
 [alpha-market]
 book_url=tcp://*:5558
 
-
 [alpha-order]
 receive_url=tcp://localhost:6001
 send_url=tcp://*:6002
+
+[alpha-contract]
+#name=depth,tick price,min price,max price(price exponent is -2)
+CON-1=5,100,1000,1000000
+CON-2=10,5,1500,50000
