增加efh高频行情

--- a/src/rem_config.ini
+++ b/src/rem_config.ini
@@ -11,6 +11,12 @@ TopicID=21001
 IP=183.129.220.106
 Port=40006
 
+[rem-efhmarket]
+remote_ip=233.54.1.100
+remote_port=30800
+local_ip=192.168.109.129
+local_port=30900
+
 [rem-exchange]
 IP=183.129.220.106
 Port=40000
