在不能和对手方报价匹配成交时，还需要根据预设定比率检查报单在同等价位上是否达到成交条件

--- a/src/trade_matching_settings.ini
+++ b/src/trade_matching_settings.ini
@@ -3,6 +3,9 @@ market=CME
 start_include=2017-04-21 12:41:16
 end_exclude=2017-04-26 12:41:16 
 speed=2
+# 利用这个比率（[0,100]）和实际成交数量来决定一个订单是否成交，例：
+# 如果 trade_rate = 30，那么当行情数据中该价位上的报单量的 30% 成交后，接受到的同价位的订单可以马上成交
+trade_rate=0
 
 [alpha-market]
 book_url=tcp://*:5558
