增加回放 修改差诶数据库行情更新时间

--- a/src/femas_config.ini
+++ b/src/femas_config.ini
@@ -4,7 +4,8 @@ UserID=6660357901
 Password=66603579
 
 [femas-DepthTopicID]
-TopicID=100
+TopicID=21001
+USTP_TE_RESUME_TYPE=1
 
 [femas-market]
 url=tcp://180.166.103.35:28005
