添加根据解析后的行情数据进行回放的模块

--- a/src/persist_settings.ini
+++ b/src/persist_settings.ini
@@ -3,3 +3,5 @@ receive_url=tcp://localhost:5557
 db_url=mongodb://localhost:27017/
 db_name=markets_data
 page_size=10
+# 保存解析后行情数据的 collection 的名字
+market_data_collection=AllMarkets
