行情回放时可以指定只回放某些合约的数据

--- a/src/trade_matching_settings.ini
+++ b/src/trade_matching_settings.ini
@@ -1,7 +1,12 @@
 [alpha]
+# 回放的交易所
 market=CME
+# 回放的合约（逗号分割的合约号；回放所有合约的话设置为 *）
+contracts=ni1709,ni1710
+# 回放数据的开始，结束时间（[yyyy-mm-dd HH:mi:ss, yyyy-mm-dd HH:mi:ss)）
 start_include=2017-04-21 12:41:16
 end_exclude=2017-04-26 12:41:16 
+# 按照这个倍率（相对于接受速度）回放，比如：2 表示快 2被，0.1 表示慢 10 倍
 speed=2
 # 利用这个比率（[0,100]）和实际成交数量来决定一个订单是否成交，例：
 # 如果 trade_rate = 30，那么当行情数据中该价位上的报单量的 30% 成交后，接受到的同价位的订单可以马上成交
