增加重新登录机制

--- a/src/ctp_config.ini
+++ b/src/ctp_config.ini
@@ -1,10 +1,10 @@
 [ctp-user]
-BrokerID=9999
+BrokerID=3040
 UserID=094090
 Password=yh10106699
 
 [ctp-market]
-url=tcp://180.168.146.187:10010
+url=tcp://180.169.85.204:41213
 front_addr_1b=tcp://180.168.212.51:41213
 front_addr_2a=tcp://180.168.212.52:41205		
 front_addr_2b=tcp://180.168.212.53:41213		
@@ -26,7 +26,7 @@ VolumeCondition=1
 ForceCloseReason=0
 
 [zeromq]
-org_url=tcp://*:5557
+org_url=tcp://localhost:5557
 book_url=tcp://*:5558
 
 [ctp-timeout]
