--- a/src/persist_settings.ini
+++ b/src/persist_settings.ini
@@ -1,5 +1,5 @@
 [persist]
-receive_url=tcp://localhost:5557
+receive_url=tcp://*:5557
 db_url=mongodb://localhost:27017/
 db_name=markets_data
 page_size=10
