--- a/src/ctp_config.ini
+++ b/src/ctp_config.ini
@@ -16,7 +16,7 @@ InstrumentFileDir=InstrumentID.csv
 
 [ctp-exchange]
 url=tcp://180.168.146.187:10000
-InvestorID=66603579
+InvestorID=094090
 OffsetFlag=0
 HedgeFlag=1
 TimeCondition=1
